5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1734_2495.log
== TEST (2019-05-07 21:49:22) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num=-1):
	# Verifica se valor eh divisivel por 2
	if (num%2==0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
	

-- ERROR:
File "XXXX", line 9
    while (num=-1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:50:10) 
-- CODE:
num = int(input("Digite um numero: "))
while (num=-1):
	if (num%2==0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
	

-- ERROR:
File "XXXX", line 2
    while (num=-1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:50:20) 
-- CODE:
num = int(input("Digite um numero: "))
while num=-1:
	if (num%2==0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
	

-- ERROR:
File "XXXX", line 2
    while num=-1:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:53:35) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
	

-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:57:15) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
	

-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:58:15) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
num = int(input("Digite um numero: "))
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	

-- ERROR:
File "XXXX", line 3
    num = int(input())
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:58:47) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR
num=int(input("Digite um numero: "))	
print(mensagem)
	

-- ERROR:
File "XXXX", line 6
    mensagem = "IMPAR
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:59:06) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
		num=int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR
		num=int(input("Digite um numero: "))	
print(mensagem)
	

-- ERROR:
File "XXXX", line 7
    mensagem = "IMPAR
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:59:27) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
		num=int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
		num=int(input("Digite um numero: "))	
print(mensagem)
	

-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:10:34) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
num=int(input("Digite um numero: "))

	

-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 10:12:18) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num=int(input("Digite um numero: "))

	

-- EXECUTION TIME:
0.555729
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:12:34) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num=int(input("Digite um numero: "))

	

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 10:18:01) 
-- CODE:
num=int(input("Digite um numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
print(mensagem)
num=int(input("Digite um numero: "))

	

-- EXECUTION TIME:
424.308
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:24:22) 
-- CODE:
num=int(input("Digite o numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num=int(input("Digite um numero: "))

	

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:24:28) 
-- CODE:
num=int(input("Digite o numero: "))
while (num!=-1):
	if (num%2==0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"	
	print(mensagem)
	num=int(input("Digite um numero: "))

	

-- EXECUTION TIME:
0.170619
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
